Adjust Maven integration test to Java 11 and migrated TNG Nexus
Issue: #117
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>